crates/yamlito/tests/snapshots/parser__ast_snapshots@comment__flow_sequence.yml.snap
---
source: tests/parser.rs
expression: "ito::debug::ast_string(&tree)"
input_file: tests/yaml/comment/flow_sequence.yml
---
Stream
  Document
    FlowSequence (3 entries)
      Scalar [plain] "1"
        decoded="1" value=Int(1)
      Scalar [plain] "2"
        decoded="2" value=Int(2)
      Scalar [plain] "3"
        decoded="3" value=Int(3)
