crates/yamlito/tests/snapshots/parser__ast_snapshots@comment__only_comments.yml.snap
---
source: tests/parser.rs
expression: "ito::debug::ast_string(&tree)"
input_file: tests/yaml/comment/only_comments.yml
---
Stream
